# Iris_Osiris

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README  README.md  appveyor.yml
cmake/: ALL_BUILD.vcxproj.user.in  Osiris.vcxproj.user.in
data/: process.ini  process_CASIA-IrisV2.txt
data/OsirisParam/: filters.txt  points.txt
scores/: list_result_matching_intra.txt
scripts/Matching/: configuration.ini  list_matching_intra.txt
scripts/Template/: ImageListICE.txt  configuration.ini
src/: OsiCircle.cpp  OsiCircle.h  OsiEye.cpp  OsiEye.h  OsiMain.cpp  OsiManager.cpp  OsiManager.h  OsiProcessings.cpp  OsiProcessings.h  OsiStringUtils.h  OsirisMfc.cpp  OsirisMfc.h  OsirisMfc.rc  OsirisMfcDlg.cpp  OsirisMfcDlg.h  makefile  resource.h
